# live-stream-systems-case-study

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
config/: rotation_manifest.json
configs/: auto_dj_classification_overrides.example.json  auto_dj_classification_overrides.json  production.env.example  v3.shadow.env.example
docs/: 00_INDEX.md  28-day-same-url-sli-case-study.md  README.md  architecture.md  archive-note.md  compliance-and-licensing-boundary.md  contributing.md  design-decisions-for-review.md  evolution.md  executive-summary.md  hiring-reviewer-guide.md  implementation-review-map.md  incident-review-template.md  observability.md  operational-scorecard.md  operations.md  physical-topology.md  public-release.md  runtime-contract.md  security-and-secrets.md  sli-methodology.md  support.md  test-strategy-and-safety-boundary.md
tests/: test_action_plan.py  test_auto_dj_rotation.py  test_cli_ops_commands.py  test_cli_stream_key.py  test_cli_systemctl_flow.py  test_cli_watchdog_state.py  test_critical_helper_contracts.py  test_docs_structure.py  test_ensure_pulse.py  test_env_sync.py  test_fast_recovery.py  test_ffmpeg_lifecycle.py  test_health_summary.py  test_local_runtime.py  test_memory_status.py  test_network_observer.py  test_non_disruptive_smoke_contracts.py  test_observe_stream_health.py  test_operational_replay_contracts.py  test_orchestrator.py  test_organize_time.py  test_overlay_corner_contract.py  test_overlay_server_outline.py  test_process_discovery.py  (+45 more)
(+394 files in other folders)
