[project]
name = "stream-v3"
version = "3.1.0"
description = "k3s-oriented parallel build for ADS-B YouTube 24/7 streaming"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "mutagen",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
